@@ -1,5 +1,16 @@
 2007-02-14  David Hyatt  <hyatt@apple.com>
 
+        Move setPlatformData out of FontFallbackListMac.mm and delete the file.  The function was completely
+        cross-platform already.
+
+        Reviewed by Ada
+
+        * WebCore.xcodeproj/project.pbxproj:
+        * platform/FontFallbackList.cpp:
+        (WebCore::FontFallbackList::setPlatformFont):
+
+2007-02-14  David Hyatt  <hyatt@apple.com>
+
         Make the Font constructor that takes a FontPlatformData cross-platform, since the implementation was already
         completely cross-platform.
 
